// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollectionCountBadge - Snapshots > matches the snapshot 1`] = `
<div
  aria-label="123 posts"
  class="flex h-6 shrink-0 items-center justify-center gap-1 rounded-full px-2 py-1 text-muted-foreground bg-background"
  data-cy="collection-count-badge"
  data-testid="container"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-sticky-note size-3 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
    />
    <path
      d="M15 3v5a1 1 0 0 0 1 1h5"
    />
  </svg>
  <span
    class="text-xs leading-4 font-medium tracking-widest uppercase"
    data-testid="typography"
  >
    123
    <span
      class="hidden sm:inline"
      data-testid="typography"
    >
       posts
    </span>
  </span>
</div>
`;

exports[`CollectionCountBadge - Snapshots > matches the snapshot with the label visible on mobile 1`] = `
<div
  aria-label="123 posts"
  class="flex h-6 shrink-0 items-center justify-center gap-1 rounded-full px-2 py-1 text-muted-foreground bg-background"
  data-cy="collection-count-badge"
  data-testid="container"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-sticky-note size-3 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
    />
    <path
      d="M15 3v5a1 1 0 0 0 1 1h5"
    />
  </svg>
  <span
    class="text-xs leading-4 font-medium tracking-widest uppercase"
    data-testid="typography"
  >
    123
    <span
      class="inline"
      data-testid="typography"
    >
       posts
    </span>
  </span>
</div>
`;
